@@ -36,7 +36,10 @@ static const char *help_genozip[] = {
     "   -V --version      Display version number",
     "",    
     "Flags:",    
-    "   -i --stdin        <data-type>. data-type is one of: vcf, sam. This must be specified when redirecting input data with a < or |",
+    "   -i --input        <data-type>. data-type is one of: ",
+    "                        VCF: vcf, vcf.gz, vcf.bgz, vcf.bz2, vcf.xz, bcf, bcf.gz, bcf.bgz",
+    "                        SAM: sam, bam",
+    "                     This flag should be used when redirecting input data with a < or |, or if the input file type cannot be determined by its file name",
     "",
     "   -c --stdout       Send output to standard output instead of a file",    
     "",
@@ -50,6 +53,8 @@ static const char *help_genozip[] = {
     "",
     "   -m --md5          Calculate the MD5 hash of the original textual file (vcf, sam). When the resulting file is decompressed, this MD5 will be compared to the MD5 of the textual decompressed file.",
     "                     Note: for compressed files, e.g. myfile.vcf.gz or myfile.bam, the MD5 calculated is that of the original, uncompressed textual file - myfile.vcf or myfile.sam respectively.",
+    "",
+    "   -I --input-size   <file size in bytes> genozip configures its internal data structures to optimize execution speed based on the file size. When redirecting the input file with < or |, genozip cannot determine its size, and this might result in slower execution. This problem can be overcome by using this flag to inform genozip of the file size",    
     "",
     "   -q --quiet        Don't show the progress indicator or warnings",    
     "",
